# distributed-log-analysis-system

./: .gitignore  CMakeLists.txt  Client.cpp  Server.cpp  linux_setup.sh  vcpkg.json
helpers/: CMakeLists.txt  Helper.cpp  Helper.hpp  boost.hpp  file_handler.hpp  http_handler.hpp
helpers/classes/: CMakeLists.txt  Listener.cpp  Listener.h  Listener.hpp  ResponseHandler.hpp  Session.cpp  Session.h  Session.hpp
public/: index.html
